@@ -104,6 +104,12 @@ CONFIGURATION
         Instead of the default filename ordering you can sort by any stat
         attribute. For example size, atime, mtime, ctime.
 
+    GalleryDirSortBy>
+
+        Set this variable to sort directories differently than other items,
+        can be set to size, atime, mtime and ctime; setting any other value
+        will revert to sorting by name.
+
     GalleryMemoize
         Cache EXIF data using Memoize - this will make Apache::Gallery
         faster when many people access the same images, but it will also
